inotify: Fix nested sleeps in inotify_read() (bsc#940925).

--- a/series.conf
+++ b/series.conf
@@ -5223,6 +5223,7 @@
 	patches.fixes/vfs-fix-race-between-fcntl-and-file-f_flags-checks.patch
 
 	patches.fixes/fanotify-fix-deadlock-during-thread-exit.patch
+	patches.fixes/inotify-nested-sleep-fix.patch
 
 	########################################################
 	# Swap-over-NFS
