kernel: do full redraw of the 3270 screen on reconnect (bnc#943477, LTC#129509).

--- a/series.conf
+++ b/series.conf
@@ -1315,6 +1315,8 @@
 
 	patches.arch/s390-sles11sp4-07-01-dasd-alias-offline-panic.patch
 
+	patches.arch/s390-sles11sp4-08-01-3270-reconnect.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
