- pci: Add flag indicating device has been assigned by KVM   (bnc#777565 FATE#313819). - x86-64: Don't apply destructive erratum workaround on unaffected   CPUs (bsc#929076). - Refresh other Xen patches.

--- a/series.conf
+++ b/series.conf
@@ -23061,6 +23061,7 @@
 	patches.xen/xen3-PCI-MSI-Add-pci_enable_msi_range-and-pci_enable_msix.patch
 	patches.xen/xen3-btrfs-0480-change-scrub-to-support-big-blocks.patch
 	patches.xen/xen3-irq_per_pci_device_msi_irq_listing.patch
+	patches.xen/xen3-pci-Add-flag-indicating-device-has-been-assigned-by-.patch
 	patches.xen/xen3-PCI-Cache-MSI-MSI-X-capability-offsets-in-struct-pci.patch
 	patches.xen/xen3-drm-i915-load-a-ring-frequency-scaling-table-v3
 	patches.xen/xen3-0361-agp-iommu_gfx_mapped-only-available-if-config_intel_iommu-is-set
@@ -23111,6 +23112,7 @@
 	patches.xen/xen3-01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
 	patches.xen/xen3-02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 	patches.xen/xen3-0001-x86-efi-Add-EFI-framebuffer-earlyprintk-support.patch
+	patches.xen/xen3-x86-64-don-t-apply-destructive-erratum-workaround-on-unaffected-cpus
 
 	# bugfixes and enhancements
 	patches.xen/xen-hypercall-symbols
@@ -23163,6 +23165,7 @@
 	patches.xen/xen-vscsi-large-requests
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
+	patches.xen/xen-pv-on-hvm-skip-initialization-of-emulated-devices
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-no-lapic
@@ -23178,4 +23181,3 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-unmapped-initrd
-	patches.xen/xen-pv-on-hvm-skip-initialization-of-emulated-devices
