--- a/series.conf
+++ b/series.conf
@@ -13981,6 +13981,7 @@
 	patches.drivers/0007-xhci-Allocate-correct-amount-of-scratchpad-buffers.patch
 	patches.drivers/0008-xhci-fix-reporting-of-0-sized-URBs-in-control-endpoi.patch
 	patches.drivers/0009-xhci-Workaround-for-PME-stuck-issues-in-Intel-xhci.patch
+	patches.drivers/0010-usb-xhci-handle-Config-Error-Change-CEC-in-xhci-driv.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
