--- a/series.conf
+++ b/series.conf
@@ -13982,6 +13982,7 @@
 	patches.drivers/0008-xhci-fix-reporting-of-0-sized-URBs-in-control-endpoi.patch
 	patches.drivers/0009-xhci-Workaround-for-PME-stuck-issues-in-Intel-xhci.patch
 	patches.drivers/0010-usb-xhci-handle-Config-Error-Change-CEC-in-xhci-driv.patch
+	patches.drivers/0011-xhci-Solve-full-event-ring-by-increasing-TRBS_PER_SE.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
