xhci: rework cycle bit checking for new dequeue pointers (bnc#933721).

--- a/series.conf
+++ b/series.conf
@@ -13975,6 +13975,7 @@
 	patches.drivers/0001-xhci-Don-t-enable-disable-RWE-on-bus-suspend-resume.patch
 	patches.drivers/0002-usb-xhci-Prefer-endpoint-context-dequeue-pointer-ove.patch
 	patches.drivers/0003-xhci-Treat-not-finding-the-event_seg-on-COMP_STOP-th.patch
+	patches.drivers/0004-xhci-rework-cycle-bit-checking-for-new-dequeue-point.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
