--- a/series.conf
+++ b/series.conf
@@ -13984,6 +13984,7 @@
 	patches.drivers/0010-usb-xhci-handle-Config-Error-Change-CEC-in-xhci-driv.patch
 	patches.drivers/0011-xhci-Solve-full-event-ring-by-increasing-TRBS_PER_SE.patch
 	patches.drivers/0012-xhci-report-U3-when-link-is-in-resume-state.patch
+	patches.drivers/0013-xhci-do-not-report-PLC-when-link-is-in-internal-resu.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
