--- a/series.conf
+++ b/series.conf
@@ -13971,6 +13971,9 @@
 
 	patches.drivers/0001-usb-core-Fix-USB-3.0-devices-lost-in-NOTATTACHED-sta.patch
 
+	#lost fixes from 3.2 stable
+	patches.drivers/0001-xhci-Don-t-enable-disable-RWE-on-bus-suspend-resume.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
