--- a/series.conf
+++ b/series.conf
@@ -13980,6 +13980,7 @@
 	patches.drivers/0006-USB-xhci-Reset-a-halted-endpoint-immediately-when-we.patch
 	patches.drivers/0007-xhci-Allocate-correct-amount-of-scratchpad-buffers.patch
 	patches.drivers/0008-xhci-fix-reporting-of-0-sized-URBs-in-control-endpoi.patch
+	patches.drivers/0009-xhci-Workaround-for-PME-stuck-issues-in-Intel-xhci.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
