xhci: fix reporting of 0-sized URBs in control endpoint (bnc#933721).

--- a/series.conf
+++ b/series.conf
@@ -13979,6 +13979,7 @@
 	patches.drivers/0005-USB-xhci-don-t-start-a-halted-endpoint-before-its-ne.patch
 	patches.drivers/0006-USB-xhci-Reset-a-halted-endpoint-immediately-when-we.patch
 	patches.drivers/0007-xhci-Allocate-correct-amount-of-scratchpad-buffers.patch
+	patches.drivers/0008-xhci-fix-reporting-of-0-sized-URBs-in-control-endpoi.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
