--- a/series.conf
+++ b/series.conf
@@ -13973,6 +13973,7 @@
 
 	#lost fixes from 3.2 stable
 	patches.drivers/0001-xhci-Don-t-enable-disable-RWE-on-bus-suspend-resume.patch
+	patches.drivers/0002-usb-xhci-Prefer-endpoint-context-dequeue-pointer-ove.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
