--- a/series.conf
+++ b/series.conf
@@ -13976,6 +13976,7 @@
 	patches.drivers/0002-usb-xhci-Prefer-endpoint-context-dequeue-pointer-ove.patch
 	patches.drivers/0003-xhci-Treat-not-finding-the-event_seg-on-COMP_STOP-th.patch
 	patches.drivers/0004-xhci-rework-cycle-bit-checking-for-new-dequeue-point.patch
+	patches.drivers/0005-USB-xhci-don-t-start-a-halted-endpoint-before-its-ne.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
