--- a/series.conf
+++ b/series.conf
@@ -13977,6 +13977,7 @@
 	patches.drivers/0003-xhci-Treat-not-finding-the-event_seg-on-COMP_STOP-th.patch
 	patches.drivers/0004-xhci-rework-cycle-bit-checking-for-new-dequeue-point.patch
 	patches.drivers/0005-USB-xhci-don-t-start-a-halted-endpoint-before-its-ne.patch
+	patches.drivers/0006-USB-xhci-Reset-a-halted-endpoint-immediately-when-we.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
