drm/i915: Remove pch_rq_mask from struct drm_i915_private (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9614,6 +9614,7 @@
 	patches.drm/3235-drm-i915-fix-forcewake-posting-reads
 	patches.drm/3236-drm-i915-disable-asyncflip-performance-optimisations
 	patches.drm/3237-drm-i915-gfx_mode-flush-tlb-invalidate-mode-must-be-1-for-scanline-waits
+	#..#
 	patches.drm/3238-Revert-drm-radeon-kms-enable-the-ttm-dma-pool-if-swi.diff
 	patches.drm/3241-revert-use-of-memchr_inv.diff
 	patches.drm/3243-use-pm_qos_params_h.diff
@@ -9787,6 +9788,9 @@
 	patches.arch/x86-intel-Add-quirk-to-disable-HPET-for-the-Baytrail
 	patches.arch/ACPI-idle-permit-sparse-C-state-sub-state-numbers
 	patches.drivers/HP-POS-force-vendor-backlight
+
+	# Backport IRQ storm detection to support Wincor Beetle systems
+	patches.drm/drm-i915-Remove-pch_rq_mask-from-struct-drm_i915_private.patch
 
 	########################################################
 	# video4linux
