drm/i915: Avoid race of intel_crt_detect_hotplug() with HPD interrupt (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9821,6 +9821,7 @@
 	patches.drm/drm-i915-assert_spin_locked-for-pipestat-interrupt-enable-disable.patch
 	patches.drm/drm-i915-clear-crt-hotplug-compare-voltage-field-before-setting.patch
 	patches.drm/drm-i915-Make-hpd-arrays-big-enough-to-avoid-out-of-bounds-access.patch
+	patches.drm/drm-i915-Avoid-race-of-intel_crt_detect_hotplug-with-HPD-interrupt.patch
 
 	########################################################
 	# video4linux
