--- a/series.conf
+++ b/series.conf
@@ -9805,6 +9805,7 @@
 	patches.drm/drm-i915-Add-bit-field-to-record-which-pins-have-received-HPD-events-v3.patch
 	patches.drm/drm-i915-Only-reprobe-display-on-encoder-which-has-received-an-HPD-event-v2.patch
 	patches.drm/drm-i915-Add-messages-useful-for-HPD-storm-detection-debugging-v2.patch
+	patches.drm/drm-i915-fix-hotplug-event-bit-tracking.patch
 
 	########################################################
 	# video4linux
