drm/i915: Use an interrupt save spinlock in intel_hpd_irq_handler() (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9823,6 +9823,7 @@
 	patches.drm/drm-i915-Make-hpd-arrays-big-enough-to-avoid-out-of-bounds-access.patch
 	patches.drm/drm-i915-Avoid-race-of-intel_crt_detect_hotplug-with-HPD-interrupt.patch
 	patches.drm/drm-i915-Queue-reenable-timer-also-when-enable_hotplug_processing-is-false.patch
+	patches.drm/drm-i915-Use-an-interrupt-save-spinlock-in-intel_hpd_irq_handler.patch
 
 	########################################################
 	# video4linux
