drm/i915: Add HPD IRQ storm detection (v5) (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9797,6 +9797,7 @@
 	patches.drm/drm-i915-implement-ibx_hpd_irq_setup.patch
 	patches.drm/DRM-i915-Remove-i965_hpd_irq_setup.patch
 	patches.drm/DRM-i915-Get-rid-if-the-hotplug_supported_mask-in-struct-drm_i915_private.patch
+	patches.drm/drm-i915-Add-HPD-IRQ-storm-detection-v5.patch
 
 	########################################################
 	# video4linux
