--- a/series.conf
+++ b/series.conf
@@ -9803,6 +9803,7 @@
 	patches.drm/drm-i915-Disable-HPD-interrupt-on-pin-when-irq-storm-is-detected-v3.patch
 	patches.drm/drm-i915-Add-Reenable-Timer-to-turn-Hotplug-Detection-back-on-v4.patch
 	patches.drm/drm-i915-Add-bit-field-to-record-which-pins-have-received-HPD-events-v3.patch
+	patches.drm/drm-i915-Only-reprobe-display-on-encoder-which-has-received-an-HPD-event-v2.patch
 
 	########################################################
 	# video4linux
