--- a/series.conf
+++ b/series.conf
@@ -9817,6 +9817,7 @@
 	patches.drm/drm-i915-fold-the-queue_work-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-no-irq-check-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fix-hpd-interrupt-register-locking.patch
+	patches.drm/drm-i915-fix-hpd-work-vs.-flush_work-in-the-pageflip-code-deadlock.patch
 
 	########################################################
 	# video4linux
