--- a/series.conf
+++ b/series.conf
@@ -9812,6 +9812,7 @@
 	patches.drm/drm-i915-Fix-up-sdvo-hpd-pins-for-i965g-gm.patch
 	patches.drm/drm-i915-fix-locking-around-ironlake_enable-disable_display_irq.patch
 	patches.drm/drm-i915-close-tiny-race-in-the-ilk-pcu-even-interrupt-setup.patch
+	patches.drm/drm-i915-s-hotplug_irq_storm_detect-intel_hpd_irq_handler.patch
 
 	########################################################
 	# video4linux
