--- a/series.conf
+++ b/series.conf
@@ -9813,6 +9813,7 @@
 	patches.drm/drm-i915-fix-locking-around-ironlake_enable-disable_display_irq.patch
 	patches.drm/drm-i915-close-tiny-race-in-the-ilk-pcu-even-interrupt-setup.patch
 	patches.drm/drm-i915-s-hotplug_irq_storm_detect-intel_hpd_irq_handler.patch
+	patches.drm/drm-i915-fold-the-hpd_irq_setup-call-into-intel_hpd_irq_handler.patch
 
 	########################################################
 	# video4linux
