drm/i915: fix hpd interrupt register locking (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9816,6 +9816,7 @@
 	patches.drm/drm-i915-fold-the-hpd_irq_setup-call-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-queue_work-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-no-irq-check-into-intel_hpd_irq_handler.patch
+	patches.drm/drm-i915-fix-hpd-interrupt-register-locking.patch
 
 	########################################################
 	# video4linux
