DRM/i915: Convert HPD interrupts to make use of HPD pin assignment in encoders (v2) (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9793,6 +9793,7 @@
 	patches.drm/drm-i915-Remove-pch_rq_mask-from-struct-drm_i915_private.patch
 	patches.drm/DRM-i915-Remove-valleyview_hpd_irq_setup.patch
 	patches.drm/DRM-I915-Add-enum-hpd_pin-to-intel_encoder.patch
+	patches.drm/DRM-i915-Convert-HPD-interrupts-to-make-use-of-HPD-pin-assignment-in-encoders-v2.patch
 
 	########################################################
 	# video4linux
