--- a/series.conf
+++ b/series.conf
@@ -9792,6 +9792,7 @@
 	# Backport IRQ storm detection to support Wincor Beetle systems
 	patches.drm/drm-i915-Remove-pch_rq_mask-from-struct-drm_i915_private.patch
 	patches.drm/DRM-i915-Remove-valleyview_hpd_irq_setup.patch
+	patches.drm/DRM-I915-Add-enum-hpd_pin-to-intel_encoder.patch
 
 	########################################################
 	# video4linux
