DRM/i915: Get rid if the 'hotplug_supported_mask' in struct drm_i915_private (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9796,6 +9796,7 @@
 	patches.drm/DRM-i915-Convert-HPD-interrupts-to-make-use-of-HPD-pin-assignment-in-encoders-v2.patch
 	patches.drm/drm-i915-implement-ibx_hpd_irq_setup.patch
 	patches.drm/DRM-i915-Remove-i965_hpd_irq_setup.patch
+	patches.drm/DRM-i915-Get-rid-if-the-hotplug_supported_mask-in-struct-drm_i915_private.patch
 
 	########################################################
 	# video4linux
