drm/i915: Fix hotplug interrupt enabling for SDVOC (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9806,6 +9806,7 @@
 	patches.drm/drm-i915-Only-reprobe-display-on-encoder-which-has-received-an-HPD-event-v2.patch
 	patches.drm/drm-i915-Add-messages-useful-for-HPD-storm-detection-debugging-v2.patch
 	patches.drm/drm-i915-fix-hotplug-event-bit-tracking.patch
+	patches.drm/drm-i915-Fix-hotplug-interrupt-enabling-for-SDVOC.patch
 
 	########################################################
 	# video4linux
