drm/i915: clear crt hotplug compare voltage field before setting (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9819,6 +9819,7 @@
 	patches.drm/drm-i915-fix-hpd-interrupt-register-locking.patch
 	patches.drm/drm-i915-fix-hpd-work-vs.-flush_work-in-the-pageflip-code-deadlock.patch
 	patches.drm/drm-i915-assert_spin_locked-for-pipestat-interrupt-enable-disable.patch
+	patches.drm/drm-i915-clear-crt-hotplug-compare-voltage-field-before-setting.patch
 
 	########################################################
 	# video4linux
