drm/i915: Enable hotplug interrupts after querying hw capabilities (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9807,6 +9807,7 @@
 	patches.drm/drm-i915-Add-messages-useful-for-HPD-storm-detection-debugging-v2.patch
 	patches.drm/drm-i915-fix-hotplug-event-bit-tracking.patch
 	patches.drm/drm-i915-Fix-hotplug-interrupt-enabling-for-SDVOC.patch
+	patches.drm/drm-i915-Enable-hotplug-interrupts-after-querying-hw-capabilities.patch
 
 	########################################################
 	# video4linux
