drm/i915: assert_spin_locked for pipestat interrupt enable/disable (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9818,6 +9818,7 @@
 	patches.drm/drm-i915-fold-the-no-irq-check-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fix-hpd-interrupt-register-locking.patch
 	patches.drm/drm-i915-fix-hpd-work-vs.-flush_work-in-the-pageflip-code-deadlock.patch
+	patches.drm/drm-i915-assert_spin_locked-for-pipestat-interrupt-enable-disable.patch
 
 	########################################################
 	# video4linux
