drm/i915: Add messages useful for HPD storm detection debugging (v2) (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9804,6 +9804,7 @@
 	patches.drm/drm-i915-Add-Reenable-Timer-to-turn-Hotplug-Detection-back-on-v4.patch
 	patches.drm/drm-i915-Add-bit-field-to-record-which-pins-have-received-HPD-events-v3.patch
 	patches.drm/drm-i915-Only-reprobe-display-on-encoder-which-has-received-an-HPD-event-v2.patch
+	patches.drm/drm-i915-Add-messages-useful-for-HPD-storm-detection-debugging-v2.patch
 
 	########################################################
 	# video4linux
