drm/i915: fold the no-irq check into intel_hpd_irq_handler (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9815,6 +9815,7 @@
 	patches.drm/drm-i915-s-hotplug_irq_storm_detect-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-hpd_irq_setup-call-into-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-queue_work-into-intel_hpd_irq_handler.patch
+	patches.drm/drm-i915-fold-the-no-irq-check-into-intel_hpd_irq_handler.patch
 
 	########################################################
 	# video4linux
