drm/i915: Make hpd arrays big enough to avoid out of bounds access (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9820,6 +9820,7 @@
 	patches.drm/drm-i915-fix-hpd-work-vs.-flush_work-in-the-pageflip-code-deadlock.patch
 	patches.drm/drm-i915-assert_spin_locked-for-pipestat-interrupt-enable-disable.patch
 	patches.drm/drm-i915-clear-crt-hotplug-compare-voltage-field-before-setting.patch
+	patches.drm/drm-i915-Make-hpd-arrays-big-enough-to-avoid-out-of-bounds-access.patch
 
 	########################################################
 	# video4linux
