--- a/series.conf
+++ b/series.conf
@@ -9799,6 +9799,7 @@
 	patches.drm/DRM-i915-Get-rid-if-the-hotplug_supported_mask-in-struct-drm_i915_private.patch
 	patches.drm/drm-i915-Add-HPD-IRQ-storm-detection-v5.patch
 	patches.drm/drm-i915-re-init-HPD-interrupt-storm-statistics.patch
+	patches.drm/drm-i915-Mask-out-the-HPD-irq-bits-before-setting-them-individually.patch
 
 	########################################################
 	# video4linux
