drm/i915: Queue reenable timer also when enable_hotplug_processing is false (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9822,6 +9822,7 @@
 	patches.drm/drm-i915-clear-crt-hotplug-compare-voltage-field-before-setting.patch
 	patches.drm/drm-i915-Make-hpd-arrays-big-enough-to-avoid-out-of-bounds-access.patch
 	patches.drm/drm-i915-Avoid-race-of-intel_crt_detect_hotplug-with-HPD-interrupt.patch
+	patches.drm/drm-i915-Queue-reenable-timer-also-when-enable_hotplug_processing-is-false.patch
 
 	########################################################
 	# video4linux
