--- a/series.conf
+++ b/series.conf
@@ -9825,6 +9825,7 @@
 	patches.drm/drm-i915-Queue-reenable-timer-also-when-enable_hotplug_processing-is-false.patch
 	patches.drm/drm-i915-Use-an-interrupt-save-spinlock-in-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-Only-print-hotplug-event-message-when-hotplug-bit-is-set.patch
+	patches.drm/drm-i915-WARN_ONCE-about-unexpected-interrupts-for-all-chipsets.patch
 
 	########################################################
 	# video4linux
