--- a/series.conf
+++ b/series.conf
@@ -9801,6 +9801,7 @@
 	patches.drm/drm-i915-re-init-HPD-interrupt-storm-statistics.patch
 	patches.drm/drm-i915-Mask-out-the-HPD-irq-bits-before-setting-them-individually.patch
 	patches.drm/drm-i915-Disable-HPD-interrupt-on-pin-when-irq-storm-is-detected-v3.patch
+	patches.drm/drm-i915-Add-Reenable-Timer-to-turn-Hotplug-Detection-back-on-v4.patch
 
 	########################################################
 	# video4linux
