--- a/series.conf
+++ b/series.conf
@@ -9811,6 +9811,7 @@
 	patches.drm/drm-i915-Don-t-WARN-nor-handle-unexpected-hpd-interrupts-on-gmch-platforms.patch
 	patches.drm/drm-i915-Fix-up-sdvo-hpd-pins-for-i965g-gm.patch
 	patches.drm/drm-i915-fix-locking-around-ironlake_enable-disable_display_irq.patch
+	patches.drm/drm-i915-close-tiny-race-in-the-ilk-pcu-even-interrupt-setup.patch
 
 	########################################################
 	# video4linux
