--- a/series.conf
+++ b/series.conf
@@ -9824,6 +9824,7 @@
 	patches.drm/drm-i915-Avoid-race-of-intel_crt_detect_hotplug-with-HPD-interrupt.patch
 	patches.drm/drm-i915-Queue-reenable-timer-also-when-enable_hotplug_processing-is-false.patch
 	patches.drm/drm-i915-Use-an-interrupt-save-spinlock-in-intel_hpd_irq_handler.patch
+	patches.drm/drm-i915-Only-print-hotplug-event-message-when-hotplug-bit-is-set.patch
 
 	########################################################
 	# video4linux
