drm/i915: implement ibx_hpd_irq_setup (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9794,6 +9794,7 @@
 	patches.drm/DRM-i915-Remove-valleyview_hpd_irq_setup.patch
 	patches.drm/DRM-I915-Add-enum-hpd_pin-to-intel_encoder.patch
 	patches.drm/DRM-i915-Convert-HPD-interrupts-to-make-use-of-HPD-pin-assignment-in-encoders-v2.patch
+	patches.drm/drm-i915-implement-ibx_hpd_irq_setup.patch
 
 	########################################################
 	# video4linux
