DRM/i915: Remove valleyview_hpd_irq_setup (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9791,6 +9791,7 @@
 
 	# Backport IRQ storm detection to support Wincor Beetle systems
 	patches.drm/drm-i915-Remove-pch_rq_mask-from-struct-drm_i915_private.patch
+	patches.drm/DRM-i915-Remove-valleyview_hpd_irq_setup.patch
 
 	########################################################
 	# video4linux
