drm/i915: Don't WARN nor handle unexpected hpd interrupts on gmch platforms (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9808,6 +9808,7 @@
 	patches.drm/drm-i915-fix-hotplug-event-bit-tracking.patch
 	patches.drm/drm-i915-Fix-hotplug-interrupt-enabling-for-SDVOC.patch
 	patches.drm/drm-i915-Enable-hotplug-interrupts-after-querying-hw-capabilities.patch
+	patches.drm/drm-i915-Don-t-WARN-nor-handle-unexpected-hpd-interrupts-on-gmch-platforms.patch
 
 	########################################################
 	# video4linux
