drm/i915: Disable HPD interrupt on pin when irq storm is detected (v3) (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9800,6 +9800,7 @@
 	patches.drm/drm-i915-Add-HPD-IRQ-storm-detection-v5.patch
 	patches.drm/drm-i915-re-init-HPD-interrupt-storm-statistics.patch
 	patches.drm/drm-i915-Mask-out-the-HPD-irq-bits-before-setting-them-individually.patch
+	patches.drm/drm-i915-Disable-HPD-interrupt-on-pin-when-irq-storm-is-detected-v3.patch
 
 	########################################################
 	# video4linux
