drm/i915: (re)init HPD interrupt storm statistics (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9798,6 +9798,7 @@
 	patches.drm/DRM-i915-Remove-i965_hpd_irq_setup.patch
 	patches.drm/DRM-i915-Get-rid-if-the-hotplug_supported_mask-in-struct-drm_i915_private.patch
 	patches.drm/drm-i915-Add-HPD-IRQ-storm-detection-v5.patch
+	patches.drm/drm-i915-re-init-HPD-interrupt-storm-statistics.patch
 
 	########################################################
 	# video4linux
