drm/i915: fix locking around ironlake_enable|disable_display_irq (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9810,6 +9810,7 @@
 	patches.drm/drm-i915-Enable-hotplug-interrupts-after-querying-hw-capabilities.patch
 	patches.drm/drm-i915-Don-t-WARN-nor-handle-unexpected-hpd-interrupts-on-gmch-platforms.patch
 	patches.drm/drm-i915-Fix-up-sdvo-hpd-pins-for-i965g-gm.patch
+	patches.drm/drm-i915-fix-locking-around-ironlake_enable-disable_display_irq.patch
 
 	########################################################
 	# video4linux
