--- a/series.conf
+++ b/series.conf
@@ -9809,6 +9809,7 @@
 	patches.drm/drm-i915-Fix-hotplug-interrupt-enabling-for-SDVOC.patch
 	patches.drm/drm-i915-Enable-hotplug-interrupts-after-querying-hw-capabilities.patch
 	patches.drm/drm-i915-Don-t-WARN-nor-handle-unexpected-hpd-interrupts-on-gmch-platforms.patch
+	patches.drm/drm-i915-Fix-up-sdvo-hpd-pins-for-i965g-gm.patch
 
 	########################################################
 	# video4linux
