drm/i915: fold the queue_work into intel_hpd_irq_handler (bsc#942938).

--- a/series.conf
+++ b/series.conf
@@ -9814,6 +9814,7 @@
 	patches.drm/drm-i915-close-tiny-race-in-the-ilk-pcu-even-interrupt-setup.patch
 	patches.drm/drm-i915-s-hotplug_irq_storm_detect-intel_hpd_irq_handler.patch
 	patches.drm/drm-i915-fold-the-hpd_irq_setup-call-into-intel_hpd_irq_handler.patch
+	patches.drm/drm-i915-fold-the-queue_work-into-intel_hpd_irq_handler.patch
 
 	########################################################
 	# video4linux
