--- a/series.conf
+++ b/series.conf
@@ -14030,6 +14030,9 @@
 	#BayTrail support for SLEPOS
 	patches.suse/0001-ehci-pci-enable-interrupt-on-BayTrail.patch
 
+	#selected patches from 4.2
+	patches.drivers/0001-xhci-Calculate-old-endpoints-correctly-on-device-res.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
