usb: xhci: apply XHCI_AVOID_BEI quirk to all Intel xHCI controllers (bnc#944989).

--- a/series.conf
+++ b/series.conf
@@ -14030,6 +14030,9 @@
 	#BayTrail support for SLEPOS
 	patches.suse/0001-ehci-pci-enable-interrupt-on-BayTrail.patch
 
+	#selected patches from 4.0
+	patches.drivers/0001-usb-xhci-apply-XHCI_AVOID_BEI-quirk-to-all-Intel-xHC.patch
+
 	#selected patches from 4.1
 	patches.drivers/0001-xhci-fix-isoc-endpoint-dequeue-from-advancing-too-fa.patch
 
