--- a/series.conf
+++ b/series.conf
@@ -22189,6 +22189,7 @@
 	patches.suse/msft-hv-0818-Drivers-hv-util-move-kvp-vss-function-declarations-t.patch
 	patches.suse/msft-hv-0820-Drivers-hv-kvp-move-poll_channel-to-hyperv_vmbus.h.patch
 	patches.suse/msft-hv-0840-Drivers-hv-vmbus-unregister-panic-notifier-on-module.patch
+	patches.suse/msft-hv-0842-drivers-hv-vmbus-Get-rid-of-some-unused-definitions.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
 	patches.suse/suse-hv-hv_daemon_defer.patch
