--- a/series.conf
+++ b/series.conf
@@ -22187,6 +22187,7 @@
 	patches.suse/msft-hv-0806-scsi-storvsc-Don-t-assume-that-the-scatterlist-is-no.patch
 	patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 	patches.suse/msft-hv-0818-Drivers-hv-util-move-kvp-vss-function-declarations-t.patch
+	patches.suse/msft-hv-0820-Drivers-hv-kvp-move-poll_channel-to-hyperv_vmbus.h.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
 	patches.suse/suse-hv-hv_daemon_defer.patch
