Drivers: hv: vmbus: add special kexec handler.

--- a/series.conf
+++ b/series.conf
@@ -22193,6 +22193,7 @@
 	patches.suse/msft-hv-0843-Drivers-hv-vmbus-Implement-the-protocol-for-tearing-.patch
 	patches.suse/msft-hv-0845-Drivers-hv-vmbus-kill-tasklets-on-module-unload.patch
 	patches.suse/msft-hv-0864-Drivers-hv-vmbus-remove-hv_synic_free_cpu-call-from-.patch
+	patches.suse/msft-hv-0865-Drivers-hv-vmbus-add-special-kexec-handler.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
 	patches.suse/suse-hv-hv_daemon_defer.patch
