Drivers: hv: don't do hypercalls when hypercall_page is NULL.

--- a/series.conf
+++ b/series.conf
@@ -22194,6 +22194,7 @@
 	patches.suse/msft-hv-0845-Drivers-hv-vmbus-kill-tasklets-on-module-unload.patch
 	patches.suse/msft-hv-0864-Drivers-hv-vmbus-remove-hv_synic_free_cpu-call-from-.patch
 	patches.suse/msft-hv-0865-Drivers-hv-vmbus-add-special-kexec-handler.patch
+	patches.suse/msft-hv-0866-Drivers-hv-don-t-do-hypercalls-when-hypercall_page-i.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
 	patches.suse/suse-hv-hv_daemon_defer.patch
