Drivers: hv: vmbus: kill tasklets on module unload.

--- a/series.conf
+++ b/series.conf
@@ -22191,6 +22191,7 @@
 	patches.suse/msft-hv-0840-Drivers-hv-vmbus-unregister-panic-notifier-on-module.patch
 	patches.suse/msft-hv-0842-drivers-hv-vmbus-Get-rid-of-some-unused-definitions.patch
 	patches.suse/msft-hv-0843-Drivers-hv-vmbus-Implement-the-protocol-for-tearing-.patch
+	patches.suse/msft-hv-0845-Drivers-hv-vmbus-kill-tasklets-on-module-unload.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
 	patches.suse/suse-hv-hv_daemon_defer.patch
