--- a/series.conf
+++ b/series.conf
@@ -14033,6 +14033,9 @@
 	#selected patches from 4.0
 	patches.drivers/0001-usb-xhci-apply-XHCI_AVOID_BEI-quirk-to-all-Intel-xHC.patch
 
+	#UAS
+	patches.drivers/0004-xhci-For-streams-the-css-flag-most-be-read-from-the-.patch
+
 	#selected patches from 4.1
 	patches.drivers/0001-xhci-fix-isoc-endpoint-dequeue-from-advancing-too-fa.patch
 
