fix lpfc_send_rscn_event allocation size claims bnc#935757

--- a/series.conf
+++ b/series.conf
@@ -17474,6 +17474,8 @@
         patches.drivers/ib-iser-add-discovery-support
 	patches.kabi/scsi-kabi-allow-iscsi-discovery-session-support
 
+	# bnc#935757
+	patches.drivers/0001-fix-lpfc_send_rscn_event-sends-bigger-buffer-size.patch
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
