Make sure XPRT_CONNECTING gets cleared when needed (bsc#946309).

--- a/series.conf
+++ b/series.conf
@@ -5321,6 +5321,8 @@
 	patches.fixes/0001-NFSv4-Fix-another-reboot-recovery-race.patch
 	patches.fixes/0001-NFS-Fix-a-regression-in-nfs_file_llseek.patch
 
+	patches.fixes/nfs-hang.fix
+
 	# bsc#918333, CVE-2014-9683
 	patches.fixes/ecryptfs-remove-buggy-and-unnecessary-write-in-file-name-decode-routine.patch
 
