--- a/series.conf
+++ b/series.conf
@@ -14054,6 +14054,9 @@
 	#selected patches from 4.2
 	patches.drivers/0001-xhci-Calculate-old-endpoints-correctly-on-device-res.patch
 
+	#camera fixes
+	patches.suse/0001-XHCI-use-uninterruptible-sleep-for-waiting-for-inter.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
