xfs: Fix softlockup in xfs_inode_ag_walk() (bsc#948347).

--- a/series.conf
+++ b/series.conf
@@ -4004,6 +4004,8 @@
 	patches.fixes/xfs-add-minimum-file-size-filtering-to-eofblocks-sca.patch
 	patches.fixes/xfs-add-background-scanning-to-clear-eofblocks-inode.patch
 
+	patches.fixes/xfs-fix-softlockup-in-inode_walk_walk.patch
+
 	########################################################
 	# ceph backport from 3.5-rc1
 	########################################################
