--- a/series.conf
+++ b/series.conf
@@ -14063,6 +14063,9 @@
 	#camera fixes
 	patches.suse/0001-XHCI-use-uninterruptible-sleep-for-waiting-for-inter.patch
 
+	#XHCI1.1
+	patches.drivers/0001-xhci-change-xhci-1.0-only-restrictions-to-support-xh.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
