SCSI: hosts: update to use ida_simple for host_no (bsc#939926)

--- a/series.conf
+++ b/series.conf
@@ -17507,6 +17507,9 @@
 	patches.fixes/jg04-correct-ldt-math-emu.patch
 	patches.fixes/x86-ldt-further-fix-fpu-emulation.patch
 
+	# bsc#948331
+	patches.fixes/scsi-hosts-update-to-use-ida_simple-for-host_no-management
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
