macvlan: Support bonding events
bsc#948521

--- a/series.conf
+++ b/series.conf
@@ -17507,6 +17507,9 @@
 	patches.fixes/jg04-correct-ldt-math-emu.patch
 	patches.fixes/x86-ldt-further-fix-fpu-emulation.patch
 
+	# bsc#948521
+	patches.fixes/macvlan-Support-bonding-events.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
