--- a/series.conf
+++ b/series.conf
@@ -5356,6 +5356,7 @@
 	patches.fixes/netfilter-do-not-drop-packet-on-insert-collision.patch
 	patches.fixes/netfilter-nf_conntrack_proto_sctp-minimal-multihomin.patch
 	patches.fixes/ipvs-fix-reuse-connection-if-real-server-is-dead.patch
+	patches.fixes/ipvs-drop-first-packet-to-dead-server.patch
 
 	########################################################
 	# PCI and PCI hotplug
