ipvs: Fix reuse connection if real server is dead (bnc#945827).

--- a/series.conf
+++ b/series.conf
@@ -5355,6 +5355,7 @@
 	patches.fixes/netfilter-conntrack-disable-generic-tracking-for-known-protos.patch
 	patches.fixes/netfilter-do-not-drop-packet-on-insert-collision.patch
 	patches.fixes/netfilter-nf_conntrack_proto_sctp-minimal-multihomin.patch
+	patches.fixes/ipvs-fix-reuse-connection-if-real-server-is-dead.patch
 
 	########################################################
 	# PCI and PCI hotplug
