mm/memory-failure.c: fix wrong num_poisoned_pages in handling memory error on thp (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1800,6 +1800,7 @@
 	patches.fixes/memory-failure-use-num_poisoned_pages-instead-of-mce_bad_pages.patch
 	patches.fixes/mm-memory-failure-c-recheck-pagehuge-after-hugetlb-page-migrate-successfully.patch
 	patches.fixes/hwpoison-hugetlb-lock_page-unlock_page-does-not-match-for-handling-a-free-hugepage.patch
+	patches.fixes/mm-memory-failure-c-fix-wrong-num_poisoned_pages-in-handling-memory-error-on-thp.patch
 
 	########################################################
 	# IPC patches
