--- a/series.conf
+++ b/series.conf
@@ -1796,6 +1796,7 @@
 	patches.fixes/hugetlb-simplify-migrate_huge_page.patch
 	patches.fixes/memory-hotplug-update-mce_bad_pages-when-removing-the-memory.patch
 	patches.fixes/memory-failure-fix-an-error-of-mce_bad_pages-statistics.patch
+	patches.fixes/memory-failure-do-code-refactor-of-soft_offline_page.patch
 
 	########################################################
 	# IPC patches
