hwpoison, hugetlb: lock_page/unlock_page does not match for handling a free hugepage (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1799,6 +1799,7 @@
 	patches.fixes/memory-failure-do-code-refactor-of-soft_offline_page.patch
 	patches.fixes/memory-failure-use-num_poisoned_pages-instead-of-mce_bad_pages.patch
 	patches.fixes/mm-memory-failure-c-recheck-pagehuge-after-hugetlb-page-migrate-successfully.patch
+	patches.fixes/hwpoison-hugetlb-lock_page-unlock_page-does-not-match-for-handling-a-free-hugepage.patch
 
 	########################################################
 	# IPC patches
