hugetlb: simplify migrate_huge_page() (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1793,6 +1793,7 @@
 
 	# bnc#947957
 	patches.fixes/mm-migrate-c-pair-unlock_page-and-lock_page-when-migrating-huge-pages.patch
+	patches.fixes/hugetlb-simplify-migrate_huge_page.patch
 
 	########################################################
 	# IPC patches
