memory-failure: use num_poisoned_pages instead of mce_bad_pages (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1797,6 +1797,7 @@
 	patches.fixes/memory-hotplug-update-mce_bad_pages-when-removing-the-memory.patch
 	patches.fixes/memory-failure-fix-an-error-of-mce_bad_pages-statistics.patch
 	patches.fixes/memory-failure-do-code-refactor-of-soft_offline_page.patch
+	patches.fixes/memory-failure-use-num_poisoned_pages-instead-of-mce_bad_pages.patch
 
 	########################################################
 	# IPC patches
