memory-failure: fix an error of mce_bad_pages statistics (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1795,6 +1795,7 @@
 	patches.fixes/mm-migrate-c-pair-unlock_page-and-lock_page-when-migrating-huge-pages.patch
 	patches.fixes/hugetlb-simplify-migrate_huge_page.patch
 	patches.fixes/memory-hotplug-update-mce_bad_pages-when-removing-the-memory.patch
+	patches.fixes/memory-failure-fix-an-error-of-mce_bad_pages-statistics.patch
 
 	########################################################
 	# IPC patches
