mm/migrate.c: pair unlock_page() and lock_page() when migrating huge pages (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1791,6 +1791,9 @@
 
 	patches.fixes/mm-restrict-access-to-slab-files-under-procfs-and-sy.patch
 
+	# bnc#947957
+	patches.fixes/mm-migrate-c-pair-unlock_page-and-lock_page-when-migrating-huge-pages.patch
+
 	########################################################
 	# IPC patches
 	########################################################
