mm/memory-failure.c: recheck PageHuge() after hugetlb page migrate successfully (bnc#947957, VM Functionality).

--- a/series.conf
+++ b/series.conf
@@ -1798,6 +1798,7 @@
 	patches.fixes/memory-failure-fix-an-error-of-mce_bad_pages-statistics.patch
 	patches.fixes/memory-failure-do-code-refactor-of-soft_offline_page.patch
 	patches.fixes/memory-failure-use-num_poisoned_pages-instead-of-mce_bad_pages.patch
+	patches.fixes/mm-memory-failure-c-recheck-pagehuge-after-hugetlb-page-migrate-successfully.patch
 
 	########################################################
 	# IPC patches
