--- a/series.conf
+++ b/series.conf
@@ -1794,6 +1794,7 @@
 	# bnc#947957
 	patches.fixes/mm-migrate-c-pair-unlock_page-and-lock_page-when-migrating-huge-pages.patch
 	patches.fixes/hugetlb-simplify-migrate_huge_page.patch
+	patches.fixes/memory-hotplug-update-mce_bad_pages-when-removing-the-memory.patch
 
 	########################################################
 	# IPC patches
