sched/core: Fix task and run queue sched_info::run_delay inconsistencies (bnc#949100).

--- a/series.conf
+++ b/series.conf
@@ -455,6 +455,8 @@
 	# bnc#886785
 	patches.fixes/hrtimer-Prevent-timer-interrupt-DoS.patch
 
+	# bnc#949100
+	patches.fixes/sched-core-Fix-task-and-run-queue-sched_info-run_delay-inconsistencies.patch
 	########################################################
 	# futex
 	########################################################
