qla2xxx: Remove unavailable firmware files (bsc#921081).

--- a/series.conf
+++ b/series.conf
@@ -6671,6 +6671,7 @@
 	patches.drivers/qla2xxx-0510-Fix-virtual-port-configuration-when-switch-p.patch
 	patches.drivers/qla2xxx-0511-Restore-physical-port-WWPN-only-when-port-do.patch
 	patches.drivers/qla2xxx-0512-Update-driver-version-to-8.07.00.18-k.patch
+	patches.drivers/qla2xxx-Remove-unavailable-firmware-files.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
