IB/srp: Avoid skipping srp_reset_host() after a transport  error (bsc#904965).

--- a/series.conf
+++ b/series.conf
@@ -10264,6 +10264,7 @@
 	patches.fixes/mlx4-correct-call-to_ib_ah_attr.patch
 
 	patches.fixes/IB-srp-Fix-a-sporadic-crash-triggered-by-cable-pulli.patch
+	patches.fixes/IB-srp-Avoid-skipping-srp_reset_host-after-a-transpo.patch
 
 
 	patches.drivers/bna-print-driver-version
