IB/srp: Fix a sporadic crash triggered by cable pulling (bsc#904965).

--- a/series.conf
+++ b/series.conf
@@ -10263,6 +10263,9 @@
 	patches.drivers/mlx4_x_0150_Fix_mlx4_ib_reg_xrc_rcv_qp_locking.patch
 	patches.fixes/mlx4-correct-call-to_ib_ah_attr.patch
 
+	patches.fixes/IB-srp-Fix-a-sporadic-crash-triggered-by-cable-pulli.patch
+
+
 	patches.drivers/bna-print-driver-version
 	patches.drivers/bna-checkpatch-cleanup
 	patches.drivers/bna-ioc-event-notification-enhancement
