dm sysfs: introduce ability to add writable attributes (bsc#904348).

--- a/series.conf
+++ b/series.conf
@@ -15252,6 +15252,7 @@
 	patches.fixes/0001-dm-optimize-use-SRCU-and-RCU.patch
 	patches.fixes/pktgen-clean-up-ktime_t-helpers.patch
 	patches.fixes/ktime-add-ktime_after-and-ktime_before-helper.patch
+	patches.fixes/dm-sysfs-introduce-ability-to-add-writable-attribute.patch
 
 	########################################################
 	# md
