--- a/series.conf
+++ b/series.conf
@@ -15254,6 +15254,7 @@
 	patches.fixes/ktime-add-ktime_after-and-ktime_before-helper.patch
 	patches.fixes/dm-sysfs-introduce-ability-to-add-writable-attribute.patch
 	patches.fixes/dm-don-t-start-current-request-if-it-would-ve-merged.patch
+	patches.fixes/dm-impose-configurable-deadline-for-dm_request_fn-s-.patch
 
 	########################################################
 	# md
