--- a/series.conf
+++ b/series.conf
@@ -15250,6 +15250,7 @@
 	patches.fixes/dm-mpath-fix-panic-on-deleting-sg-device.patch
 	patches.fixes/dm-raid-add-support-for-region-size-bnc895841.patch
 	patches.fixes/0001-dm-optimize-use-SRCU-and-RCU.patch
+	patches.fixes/pktgen-clean-up-ktime_t-helpers.patch
 
 	########################################################
 	# md
