dm: don't start current request if it would've merged with the previous (bsc#904348).

--- a/series.conf
+++ b/series.conf
@@ -15253,6 +15253,7 @@
 	patches.fixes/pktgen-clean-up-ktime_t-helpers.patch
 	patches.fixes/ktime-add-ktime_after-and-ktime_before-helper.patch
 	patches.fixes/dm-sysfs-introduce-ability-to-add-writable-attribute.patch
+	patches.fixes/dm-don-t-start-current-request-if-it-would-ve-merged.patch
 
 	########################################################
 	# md
