ktime: add ktime_after and ktime_before helpe (bsc#904348).

--- a/series.conf
+++ b/series.conf
@@ -15251,6 +15251,7 @@
 	patches.fixes/dm-raid-add-support-for-region-size-bnc895841.patch
 	patches.fixes/0001-dm-optimize-use-SRCU-and-RCU.patch
 	patches.fixes/pktgen-clean-up-ktime_t-helpers.patch
+	patches.fixes/ktime-add-ktime_after-and-ktime_before-helper.patch
 
 	########################################################
 	# md
