rtnetlink: fix VF info size (bsc#950298).

--- a/series.conf
+++ b/series.conf
@@ -2322,6 +2322,7 @@
 	patches.fixes/net-core-Add-VF-link-state-control.patch
 	patches.fixes/rtnetlink-Fix-VF-IFLA-policy.patch
 	patches.fixes/net-core-Add-VF-link-state-control-policy.patch
+	patches.fixes/rtnetlink-fix-VF-info-size.patch
 
 	########################################################
 	# tipc
