--- a/series.conf
+++ b/series.conf
@@ -2321,6 +2321,7 @@
 	patches.fixes/if_link-Add-additional-parameter-to-IFLA_VF_INFO-for.patch
 	patches.fixes/net-core-Add-VF-link-state-control.patch
 	patches.fixes/rtnetlink-Fix-VF-IFLA-policy.patch
+	patches.fixes/net-core-Add-VF-link-state-control-policy.patch
 
 	########################################################
 	# tipc
