PCI: Add dev_flags bit to access VPD through function 0 (bnc#943786).

--- a/series.conf
+++ b/series.conf
@@ -5419,7 +5419,7 @@
 	patches.fixes/pci-don-t-try-to-disable-bus-master-on-disconnected-pci-devices.patch
 	patches.fixes/pci-disable-bus-master-only-on-kexec-reboot.patch
 	patches.kabi/kabi-wrapper-include-file-with-_genksyms__-check-to-avoid-kabi-change.patch
-
+	patches.drivers/PCI-Add-dev_flags-bit-to-access-VPD-through-function.patch
 
 	########################################################
 	#
