PCI: Add VPD function 0 quirk for Intel Ethernet devices (bnc#943786).

--- a/series.conf
+++ b/series.conf
@@ -5420,6 +5420,7 @@
 	patches.fixes/pci-disable-bus-master-only-on-kexec-reboot.patch
 	patches.kabi/kabi-wrapper-include-file-with-_genksyms__-check-to-avoid-kabi-change.patch
 	patches.drivers/PCI-Add-dev_flags-bit-to-access-VPD-through-function.patch
+	patches.drivers/PCI-Add-VPD-function-0-quirk-for-Intel-Ethernet-devi.patch
 
 	########################################################
 	#
