ALSA: hda - Disable 64bit address for Creative HDA controllers (bnc#814440).

--- a/series.conf
+++ b/series.conf
@@ -14867,6 +14867,7 @@
 	patches.drivers/alsa-hda-021-Separate-stream_tag-for-input-an
 	patches.drivers/alsa-hda-022-apply-the-Seperate-stream_tag-for-Sky
 	patches.drivers/alsa-hda-023-apply-the-Seperate-stream_tag-for-Sun
+	patches.drivers/alsa-hda-024-Disable-64bit-address-for-Creative-HDA-cont
 
 	##########################################################
 	# Char + Serial
