qlge: Fix qlge_update_hw_vlan_features to handle if interface is down (bsc#930835).

--- a/series.conf
+++ b/series.conf
@@ -17664,6 +17664,9 @@
 	# bsc#945825, CVE-2015-6937
 	patches.fixes/rds-verify-the-underlying-transport-exists-before-creating-a-connection.patch
 
+	# bsc#930835
+	patches.drivers/qlge-Fix-qlge_update_hw_vlan_features-to-handle-if-i.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
