--- a/series.conf
+++ b/series.conf
@@ -9869,6 +9869,8 @@
 	patches.drm/drm-i915-Only-print-hotplug-event-message-when-hotplug-bit-is-set.patch
 	patches.drm/drm-i915-WARN_ONCE-about-unexpected-interrupts-for-all-chipsets.patch
 
+	patches.drm/drm-i915-fix-ddc-probe-for-passive-adapters.patch
+
 	########################################################
 	# video4linux
 	########################################################
