KEYS: Fix race between key destruction and finding a keyring by name (bsc#951440).

--- a/series.conf
+++ b/series.conf
@@ -4477,6 +4477,8 @@
 	patches.fixes/wireless-radiotap-fix-parsing-buffer-overrun.patch
 	# bnc#853052 CVE-2013-6368
 	patches.fixes/kvm-x86-convert-vapic-synchronization-to-cached-functions-cve-2013-6368.patch
+	# bnc#951440 CVE-2015-7872
+	patches.fixes/0001-KEYS-Fix-race-between-key-destruction-and-finding-a-.patch
 
 	##########################################################
 	# AppArmor
