xfs: use xfs_icluster_size_fsb in xfs_bulkstat (bsc#932805).

--- a/series.conf
+++ b/series.conf
@@ -17553,6 +17553,7 @@
 
 	# bsc#932805
 	patches.fixes/0001-xfs-introduce-a-common-helper-xfs_icluster_size_fsb.patch
+	patches.fixes/0002-xfs-use-xfs_icluster_size_fsb-in-xfs_bulkstat.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
