xfs: use xfs_icluster_size_fsb in xfs_imap (bsc#932805).

--- a/series.conf
+++ b/series.conf
@@ -17556,6 +17556,7 @@
 	patches.fixes/0002-xfs-use-xfs_icluster_size_fsb-in-xfs_bulkstat.patch
 	patches.fixes/0003-xfs-use-xfs_icluster_size_fsb-in-xfs_ialloc_inode_in.patch
 	patches.fixes/0004-xfs-use-xfs_icluster_size_fsb-in-xfs_ifree_cluster.patch
+	patches.fixes/0005-xfs-use-xfs_icluster_size_fsb-in-xfs_imap.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
