xfs: introduce a common helper xfs_icluster_size_fsb (bsc#932805).

--- a/series.conf
+++ b/series.conf
@@ -17551,6 +17551,9 @@
 	# bsc#948521
 	patches.fixes/macvlan-Support-bonding-events.patch
 
+	# bsc#932805
+	patches.fixes/0001-xfs-introduce-a-common-helper-xfs_icluster_size_fsb.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
