xfs: use xfs_icluster_size_fsb in xfs_ifree_cluster (bsc#932805).

--- a/series.conf
+++ b/series.conf
@@ -17555,6 +17555,7 @@
 	patches.fixes/0001-xfs-introduce-a-common-helper-xfs_icluster_size_fsb.patch
 	patches.fixes/0002-xfs-use-xfs_icluster_size_fsb-in-xfs_bulkstat.patch
 	patches.fixes/0003-xfs-use-xfs_icluster_size_fsb-in-xfs_ialloc_inode_in.patch
+	patches.fixes/0004-xfs-use-xfs_icluster_size_fsb-in-xfs_ifree_cluster.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
