xfs: Fix lost direct IO write in the last block (bsc#949744).

--- a/series.conf
+++ b/series.conf
@@ -4024,6 +4024,7 @@
 	patches.fixes/xfs-add-background-scanning-to-clear-eofblocks-inode.patch
 
 	patches.fixes/xfs-fix-softlockup-in-inode_walk_walk.patch
+	patches.fixes/xfs-fix-lost-direct-io-write-in-last-block.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
